css: fix wrong font

--- a/cds/modules/theme/assets/bootstrap3/scss/cds/variables.scss
+++ b/cds/modules/theme/assets/bootstrap3/scss/cds/variables.scss
@@ -25,9 +25,6 @@
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 $fa-font-path: "~font-awesome/fonts";
 
-// Font family
-@font-family-base: 'PT Sans', sans-serif;
-
 // Bootstrap
 $brand-primary: #0c63aa;
 $gray: #586069;
